tests/errors/papercut-no-done.futil
import "primitives/core.futil";

component main() -> () {
  cells {
    r = std_reg(32);
  }
  wires {
    group no_drive {
      r.in = 32'd1;
    }
  }
  control {
    no_drive;
  }
}
