tests/errors/papercut-no-done.expect
---CODE---
1
---STDERR---
Error: 
8 |    group no_drive {
  |          ^^^^^^^^ [Papercut] No writes to the `done' hole for group `no_drive'
